# GL-Lib

./: CMakeLists.txt  README.md
include/gl/: buffer.hpp  common.hpp  framebuffer.hpp  gl.hpp  gl_check.hpp  homography.hpp  logger.hpp  shader.hpp  shader_error.hpp  texture.hpp  vertex_array.hpp
include/libs/glad/include/glad/: glad.h
include/libs/glad/src/: glad.c
resources/shaders/cube/: cube.frag  cube.vert
resources/shaders/instanced/: instanced.frag  instanced.vert
resources/shaders/postprocess/: postprocess.frag
src/: CMakeLists.txt  main.cpp
src/components/camera/: CameraComponent.cpp  CameraComponent.hpp
src/components/effects/: HomographyEffect.cpp  HomographyEffect.hpp
src/components/geometry/: MeshComponent.cpp  MeshComponent.hpp
src/components/input/: InputHandler.cpp  InputHandler.hpp
src/components/rendering/: MeshRenderer.cpp  MeshRenderer.hpp  PostProcessor.cpp  PostProcessor.hpp
src/core/: Component.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/managers/: ResourceManager.cpp  ResourceManager.hpp
src/profiling/: Profiler.cpp  Profiler.hpp
src/scenes/: Scene.cpp  Scene.hpp
src/window/: Camera.cpp  Camera.hpp  Window.cpp  Window.hpp
